--- a/internal/ui/components/function_details.templ
+++ b/internal/ui/components/function_details.templ
@@ -1,6 +1,7 @@
 package components
 
 import (
+	"github.com/dimiro1/faas-go/internal/ui/components/badge"
 	"github.com/dimiro1/faas-go/internal/ui/components/button"
 	"github.com/dimiro1/faas-go/internal/ui/components/icons"
 	"github.com/dimiro1/faas-go/internal/ui/components/tabs"
@@ -76,13 +77,13 @@ templ FunctionDetailsView(fn FunctionDetails, tabsList []tabs.Tab, showSaveButto
 				<div class={ functionDetailsInfo() }>
 					<h1 class={ functionDetailsTitle() }>
 						{ fn.Name }
-						@IDBadge(fn.ID, true)
+						@badge.IDBadge(fn.ID)
 					</h1>
 					<p class={ functionDetailsDescription() }>{ fn.Description }</p>
 				</div>
 			</div>
 			<div class={ functionDetailsActions() }>
-				@StatusBadgeWithGlow(fn.Enabled)
+				@badge.StatusBadgeWithGlow(fn.Enabled)
 				if showSaveButton {
 					@button.Button(button.Props{
 						Variant: button.Default,
