--- a/internal/ui/components/executions_tab.templ
+++ b/internal/ui/components/executions_tab.templ
@@ -4,6 +4,7 @@ import (
 	"github.com/dimiro1/faas-go/internal/ui/components/button"
 	"github.com/dimiro1/faas-go/internal/ui/components/form"
 	"github.com/dimiro1/faas-go/internal/ui/components/icons"
+	"github.com/dimiro1/faas-go/internal/ui/components/table"
 )
 
 type ExecutionsData struct {
@@ -78,17 +79,17 @@ templ ExecutionsTab(data ExecutionsData) {
 			})
 		</div>
 		<!-- Executions Table -->
-		@Table() {
-			@TableElement() {
-				@TableHead([]string{"Execution ID", "Status", "Duration", "Time"})
-				@TableBody() {
-					for _, exec := range data.Executions {
-						@ExecutionRow(exec, data.BaseURL)
-					}
+		@table.Table(table.TableProps{Hoverable: true}) {
+			@table.Header(table.HeaderProps{}) {
+				@table.HeaderRow([]string{"Execution ID", "Status", "Duration", "Time"})
+			}
+			@table.Body(table.BodyProps{}) {
+				for _, exec := range data.Executions {
+					@ExecutionRow(exec, data.BaseURL)
 				}
 			}
-			@Pagination(data.Pagination)
 		}
+		@Pagination(data.Pagination)
 	</div>
 }
 
