--- a/internal/ui/pages/preview.templ
+++ b/internal/ui/pages/preview.templ
@@ -2,6 +2,7 @@ package pages
 
 import (
 	"github.com/dimiro1/faas-go/internal/ui/components"
+	"github.com/dimiro1/faas-go/internal/ui/components/pagination"
 	"github.com/dimiro1/faas-go/internal/ui/components/tabs"
 )
 
@@ -14,7 +15,7 @@ templ PreviewDashboard() {
 				{ID: "hello", Name: "hello", Description: "This is just a hello function", Enabled: true, Invocations: "1,203", LastUpdated: "2m ago"},
 				{ID: "image-resize", Name: "image-resize", Description: "Resizes uploaded images", Enabled: false, Invocations: "0", LastUpdated: "5d ago"},
 			},
-			components.PaginationInfo{CurrentStart: 1, CurrentEnd: 2, Total: 2, PerPage: 10, HasPrev: false, HasNext: false},
+			pagination.Props{CurrentStart: 1, CurrentEnd: 2, Total: 2, PerPage: 10, HasPrev: false, HasNext: false},
 		)
 	}
 }
@@ -202,7 +203,7 @@ templ PreviewExecutionsTab() {
 					Executions: []components.Execution{
 						{ID: "exec_12345abcde", Status: "SUCCESS", Duration: "12ms", Time: "10:42:05 PM"},
 					},
-					Pagination: components.PaginationInfo{CurrentStart: 1, CurrentEnd: 10, Total: 1203, PerPage: 10, HasPrev: false, HasNext: true},
+					Pagination: pagination.Props{CurrentStart: 1, CurrentEnd: 10, Total: 1203, PerPage: 10, HasPrev: false, HasNext: true},
 					BaseURL:    "/functions/hello/executions",
 				})
 			}
