--- a/internal/ui/pages/dashboard.templ
+++ b/internal/ui/pages/dashboard.templ
@@ -3,8 +3,11 @@ package pages
 import (
 	"github.com/dimiro1/faas-go/internal/ui/components"
 	"github.com/dimiro1/faas-go/internal/ui/components/button"
+	"github.com/dimiro1/faas-go/internal/ui/components/card"
 	"github.com/dimiro1/faas-go/internal/ui/components/form"
 	"github.com/dimiro1/faas-go/internal/ui/components/icons"
+	"github.com/dimiro1/faas-go/internal/ui/components/pagination"
+	"github.com/dimiro1/faas-go/internal/ui/components/separator"
 	"github.com/dimiro1/faas-go/internal/ui/components/table"
 )
 
@@ -38,7 +41,7 @@ css filterBar() {
 	margin-bottom: 1rem;
 }
 
-templ Dashboard(functions []components.Function, pagination components.PaginationInfo) {
+templ Dashboard(functions []components.Function, paginationInfo pagination.Props) {
 	<main class={ dashboardMain() }>
 		<div class={ dashboardHeader() }>
 			<div>
@@ -68,6 +71,9 @@ templ Dashboard(functions []components.Function, pagination components.Paginatio
 				}
 			}
 		}
-		@components.Pagination(pagination)
+		@separator.Spacer()
+		@card.Card(card.Props{}) {
+			@pagination.Pagination(paginationInfo)
+		}
 	</main>
 }
