--- a/internal/ui/components/api_reference.templ
+++ b/internal/ui/components/api_reference.templ
@@ -1,6 +1,9 @@
 package components
 
-import "github.com/dimiro1/faas-go/internal/ui/components/card"
+import (
+	"github.com/dimiro1/faas-go/internal/ui/components/card"
+	"github.com/dimiro1/faas-go/internal/ui/components/code"
+)
 
 type ApiDocItem struct {
 	Name        string
@@ -90,13 +93,6 @@ css apiExampleLabel() {
 	margin: 0 0 0.25rem 0;
 }
 
-css apiExampleCode() {
-	font-family: var(--font-mono);
-	font-size: var(--text-2xs);
-	color: var(--color-api-ctx);
-	display: block;
-}
-
 templ ApiReference(sections []ApiSection) {
 	@card.Simple() {
 		@card.HeaderTabs() {
@@ -122,7 +118,11 @@ templ ApiSectionContent(section ApiSection) {
 	if section.Example != "" {
 		<div class={ apiExample() }>
 			<p class={ apiExampleLabel() }>Example:</p>
-			<code class={ apiExampleCode() }>{ section.Example }</code>
+			@code.Simple(code.Props{
+				Language: "lua",
+				Code:     section.Example,
+				Wrap:     true,
+			})
 		</div>
 	}
 }
