--- a/internal/ui/components/preview/index.templ
+++ b/internal/ui/components/preview/index.templ
@@ -67,6 +67,7 @@ templ Index() {
 					@IndexCard(ComponentInfo{Name: "Badge", Href: "/preview/component/badge"})
 					@IndexCard(ComponentInfo{Name: "Button", Href: "/preview/component/button"})
 					@IndexCard(ComponentInfo{Name: "Card", Href: "/preview/component/card"})
+					@IndexCard(ComponentInfo{Name: "Code", Href: "/preview/component/code"})
 					@IndexCard(ComponentInfo{Name: "Form", Href: "/preview/component/form"})
 					@IndexCard(ComponentInfo{Name: "Icons", Href: "/preview/component/icons"})
 					@IndexCard(ComponentInfo{Name: "Kbd", Href: "/preview/component/kbd"})
