--- a/internal/ui/components/executions_tab.templ
+++ b/internal/ui/components/executions_tab.templ
@@ -94,7 +94,9 @@ templ ExecutionsTab(data ExecutionsData) {
 				}
 			}
 		}
-		@pagination.Pagination(data.Pagination)
+		@card.Card(card.Props{}) {
+			@pagination.Pagination(data.Pagination)
+		}
 	</div>
 }
 
