--- a/internal/ui/components/test_tab.templ
+++ b/internal/ui/components/test_tab.templ
@@ -1,7 +1,9 @@
 package components
 
+import "github.com/dimiro1/faas-go/internal/ui/components/code_example"
+
 type TestTabData struct {
-	Examples []CodeExample
+	Examples []code_example.Example
 	URL      string
 	Methods  []string
 	Response string
@@ -21,7 +23,7 @@ css testTabPanels() {
 
 templ TestTab(data TestTabData) {
 	<div class={ testTabContainer() }>
-		@CodeExamples(data.Examples)
+		@code_example.CodeExamples(data.Examples)
 		<div class={ testTabPanels() }>
 			@RequestBuilder(RequestBuilderData{
 				URL:     data.URL,
