--- a/internal/ui/components/preview/index.templ
+++ b/internal/ui/components/preview/index.templ
@@ -69,6 +69,7 @@ templ Index() {
 					@IndexCard(ComponentInfo{Name: "Card", Href: "/preview/component/card"})
 					@IndexCard(ComponentInfo{Name: "Code", Href: "/preview/component/code"})
 					@IndexCard(ComponentInfo{Name: "Code Example", Href: "/preview/component/code-example"})
+					@IndexCard(ComponentInfo{Name: "Diff", Href: "/preview/component/diff"})
 					@IndexCard(ComponentInfo{Name: "Form", Href: "/preview/component/form"})
 					@IndexCard(ComponentInfo{Name: "Icons", Href: "/preview/component/icons"})
 					@IndexCard(ComponentInfo{Name: "Kbd", Href: "/preview/component/kbd"})
